# project3_code

./: .gitignore  .gitmodules  AGENTS.md  MARSHAK_COMPARISON_README.md  Makefile  PROJECT_STRUCTURE.md  TESTING_GUIDE.md  __init__.py  history.txt  mydiff.txt  old_rad_step.py  old_radiation_step.py  project3.code-workspace  pyproject.toml  requirements.txt  run_menahem_like_codex.ps1  solver.pickle  staged_diff.txt  temp_radiation_step.py  temp_setup.txt  test_v_fit.py
.agents/rules/: dynamic_admission.md  file_edits.md  security.md
Menahem/: ablation_solver.py  piston_shock.py  subsonic_heat_wave.py
comparison/: __init__.py  compare_shock_plots.py  comparison_config.py  fig8_chi_comparison.py  marshak_comparison.py  presets.py  profiles_menahem_vs_shussman.py  rt_menahem_vs_radhydro.py  run_comparison.py  shock_config.py  shock_profiles.npz
docs/: README.md  WORKSPACE_AND_REMOTES.md
fits/: menahem_reproduction.py  sub_fitting.py
hydro_sim/: boundary.py  config.py  diagnostics.py  grid.py  integrator.py  run_hydro.py  timestep.py
hydro_sim/core/: boundary.py  eos.py  geometry.py  grid.py  integrator.py  state.py  timestep.py  viscosity.py
hydro_sim/plotting/: __init__.py  hydro_plots.py
hydro_sim/problems/: Hydro_case.py  __init__.py  base_problem.py  driven_shock_plots.py  driven_shock_problem.py  driven_shock_sim.py  presets.py  riemann_exact.py  riemann_plots.py  riemann_problem.py  riemann_sim.py  run_driven_shock.py  run_riemann.py  sedov_problem.py  simulation_config.py
hydro_sim/simulations/: __init__.py  driven_shock_sim.py  lagrangian_sim.py  riemann_exact.py  riemann_sim.py
hydro_sim/verification/: __init__.py  compare_shock_plots.py  comparison_config.py  presets.py  run_comparison.py
ictt29/: ablation_fitting_analysis.py  create_table.fdb_latexmk  data_loader.py  energy_fitting.py  final_comparison.py  full_fitting.py  full_fitting_eulerian.py  illustrate_self_similar.py  interactive_ablation_fits.py  plot_piston_shock.py  plot_test_cases.py  plot_xt.py  print_fitted_formulas.py  print_formulas.py  shock_fitting.py  sim_front_utils.py  some.fdb_latexmk  sub_fitting.py  sub_fitting_debug.py
ictt_other_presets/: full_fitting.py  full_fitting_eulerian.py  run_all.py  shock_fitting.py  sub_fitting.py
matlab_shussman_solvers/: run_matlab_profiles.py  run_shussman_final_profiles.m
matlab_shussman_solvers/shock/: Al.m  Au.m  final_profiles.m  manager.m  my_Au.m  my_final_profiles.m  my_manager.m  profiles_for_report_shock.m  solve_normalize3.m
matlab_shussman_solvers/sub/: Al.m  Cu.m  F.m  Pb.m  manager.m  profiles_for_report_sub.m  solve_for_tau.m  solve_normalize.m
matlab_shussman_solvers/super/: Al.m  F.m  Pb.m  manager1.m
matlab_shussman_solvers/test_exports/: export_shock_tau_reference.m  export_sub_reference.m  export_super_reference.m  piecewise_m_P_reference.mat  shock_tau_reference.mat  sub_reference.mat  super_reference.mat
menahem_new/: ablation_fitting_analysis.py  ablation_solver.py  ablation_solver_og.py  piston_shock.py  piston_shock_og.py  position_evolution_verification.py  subsonic_heat_wave.py  subsonic_heat_wave_fixed.py  subsonic_heat_wave_mine.py  subsonic_heat_wave_og.py  supersonic_instantaneous_analytic.py
menahem_solvers/: ablation_solver.py  piston_shock.py  solver.pickle  subsonic_heat_wave.py
project_3/: run_tests.py
rad_hydro_sim/: __init__.py  activator.py  hydro_steps.py  integrator.py  iterator.py  output_paths.py  radiation_diffusion_1D.py  radiation_step.py  run_intermediate.py  run_malka.py  run_rad_hydro.py
rad_hydro_sim/plotting/: gif.py  (+3 more)
scratch/: bath_temperature_text.txt  calculate_fraction.py  check_bath_power.py  compute_scales.py  extract_pdfs.py  hello_world.py  inspect_data.py  live_gate_test.py  plot_monitor.py  sub_pages_32_38.txt  sub_toc_scan.txt  test_clever_fits.py  test_fig10_run.py  test_fits.py  test_load.py  test_prefactors.py  test_r2_original.py  test_shock_fits.py  test_sliced_fits.py  test_solve.py  test_solvers.py  test_trigger.py  test_unpickle.py  test_user_fit.py
shteinberg_comparison/: profile_diff_1024.txt  profile_diff_1024_p100.txt  profile_diff_512_p1000.txt  profile_imc_1024.txt  profile_imc_512.txt
shussman_shock_solver/: manager_shock.py  plot_shock_profiles.py  run_shock_solver.py  shock_profiles.npz  solve_normalize_shock.py  utils.py
shussman_solvers/: README.md  __init__.py
tests/: TESTING_GUIDE.md  conftest.py  test_boundary.py  test_configs.py  test_eos.py  test_grid.py  test_hydro_comparison.py  test_run_comparison.py  test_shussman_solvers.py  test_supersonic_instantaneous.py  test_timestep.py  test_verification_fit.py
verification_hydro_sim_with_shock/: comparison_config.py  presets.py  run_comparison.py
(+157 files in other folders)
