[project]
name = "weapon-group"
version = "0.1.0"
description = "Hydrodynamic and radiation-hydrodynamic simulation tools"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "matplotlib>=3.5",
    "scipy>=1.9",
    "tqdm>=4.60",
    "pandas>=1.5",
]

# Fix "Multiple top-level packages" error: map project3_code to ".", exclude results/tests.
[tool.setuptools.package-dir]
"project3_code" = "."

[tool.setuptools]
packages = [
    "project3_code",
    "project3_code.hydro_sim",
    "project3_code.hydro_sim.core",
    "project3_code.hydro_sim.problems",
    "project3_code.hydro_sim.simulations",
    "project3_code.hydro_sim.plotting",
    "project3_code.hydro_sim.verification",
    "project3_code.rad_hydro_sim",
    "project3_code.rad_hydro_sim.simulation",
    "project3_code.rad_hydro_sim.verification",
    "project3_code.rad_hydro_sim.problems",
    "project3_code.rad_hydro_sim.plotting",
    "project3_code.shussman_solvers",
    "project3_code.shussman_solvers.shock_solver",
    "project3_code.shussman_solvers.supersonic_solver",
    "project3_code.shussman_solvers.subsonic_solver",
    "project3_code.project_3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
run-hydro = "project3_code.hydro_sim.run_hydro:main"
run-rad-hydro = "project3_code.rad_hydro_sim.run_rad_hydro:main"
run-tests = "project3_code.project_3.run_tests:main"

# =============================================================================
# Ruff configuration
# =============================================================================
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # ignore line-length for now to avoid a massive diff

[tool.ruff.lint.isort]
known-first-party = ["project3_code"]

# =============================================================================
# Pytest configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]

# =============================================================================
# Pyright / Pylance: resolve "project3_code" when workspace is the repo (project3_code)
# =============================================================================
[tool.pyright]
extraPaths = [".."]
