[project]
name = "project3"
version = "0.1.0"
description = "Project 3 Code"
requires-python = "==3.11.*"

dependencies = [
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.62.1",
    "iniconfig==2.3.0",
    "kiwisolver==1.5.0",
    "matplotlib==3.10.8",
    "numpy==1.26.4",
    "packaging==26.0",
    "pandas==3.0.1",
    "patsy==1.0.2",
    "pillow==12.1.1",
    "pluggy==1.6.0",
    "Pygments==2.19.2",
    "pyparsing==3.3.2",
    "pytest==9.0.2",
    "python-dateutil==2.9.0.post0",
    "ruff==0.15.7",
    "scipy==1.11.4",
    "six==1.17.0",
    "statsmodels==0.14.6",
    "tqdm==4.67.3",
    "tzdata==2025.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
extraPaths = [".."]

[tool.uv]
package = false